# miapr_franka_emika_panda

./: README.md
franka_control/: CMakeLists.txt  package.xml
franka_control/src/: trajectory_server.cpp
franka_control_services/: CMakeLists.txt  package.xml
franka_control_services/src/: service.cpp
franka_control_services/srv/: ObstacleDeletion.srv  ObstacleInsertion.srv  TrajectoryCartesian.srv  TrajectoryJointSpace.srv
